# CausalPype

./: .gitignore  README.md  TASKS.md  b4u_example.py  causal_analysis_report.md  mkdocs.yml  pyproject.toml
causalpype/: __init__.py  config.py  display.py  engine.py  model.py  outputs.py  pipeline.py  plotting.py  report.py  reporting.py
causalpype/graph/: __init__.py  causal_graph.py
causalpype/model/: __init__.py  causal_model.py
causalpype/models/: __init__.py  causal_model.py
causalpype/plotting/: __init__.py  plots.py
causalpype/problems/: __init__.py  base.py  root_cause.py  treatment_effect.py  what_if.py
causalpype/reports/: __init__.py  markdown.py
causalpype/results/: __init__.py  results.py
causalpype/steps/: __init__.py  base.py  build_graph.py  evaluate.py  load.py  preprocess.py  train.py
causalpype/tasks/: __init__.py  anomaly_attribution.py  arrow_strength.py  ate.py  base.py  cate.py  causal_effect_curve.py  counterfactual.py  distribution_change.py  dose_response.py  fairness.py  intervention.py  intrinsic_influence.py  knn_intervention.py  mediation.py  sensitivity.py  stochastic_intervention.py  validate.py
causalpype/utils/: __init__.py  data.py  io.py  metrics.py
causalpype/validation/: __init__.py  validator.py
docs/: index.md
docs/api/: config.md  pipeline.md  steps.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: concepts.md  configuration.md  custom-steps.md  steps.md
examples/: comparison_causalpype_vs_dowhy.ipynb  demo_adult_income.ipynb  demo_framingham_heart_study.ipynb  demo_huabb_body_weight.ipynb  demo_wine_quality.ipynb  dowhy_vs_causalpype.ipynb  framingham.ipynb  framingham_demo.ipynb  lalonde.ipynb  lalonde_jobs.py  outputs_demo.ipynb  sachs.ipynb  sachs_demo.ipynb  simpson_paradox.py  simpsons_paradox.ipynb
