[project]
name = "causalpype"
version = "0.1.0"
description = "Workflow-driven causal inference engine built on DoWhy and EconML"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "dowhy>=0.12",
    "econml>=0.16.0",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "rich>=13.0",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
]
discovery = [
    "causal-learn>=0.1.4.0",
    "lingam>=1.9.1",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "causalpype[viz,discovery]",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
