[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causalpype"
version = "0.1.0"
description = "A small Python library for causal analysis with structural causal models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "CausalPype Authors" }
]
keywords = ["causal-inference", "structural-causal-models", "dowhy", "econml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas",
    "networkx",
    "numpy",
    "dowhy",
    "econml",
    "scikit-learn",
]

[project.optional-dependencies]
viz = [
    "matplotlib",
    "seaborn",
]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/HUA-RobustAI/CausalPype"
Repository = "https://github.com/HUA-RobustAI/CausalPype"

[tool.hatch.build.targets.wheel]
packages = ["causalpype"]
